src/App.css
.App {
  text-align: center;
}


.App-header {
  background-color: #222;
  height: 150px;
  padding: 20px;
  color: white;
}

.App-title {
  font-size: 1.5em;
}

.App-intro {
  font-size: large;
}

.blurb {
  width: 60vw;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  padding-left: 20vw;
}

.company-blurb {
    width: 55vw;
left: 0;
  }

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

h1 {
font-family: 'Permanent Marker', cursive;
  }

nav {
  height: 50px;
  width: 100vw;
  display: flex;
  flex-direction: row;
  position: sticky;
}


.logo {
  padding-left: 11vw;
  padding-right: 51vw;
  width: 80px;
  font-family: 'Permanent Marker';
  font-size: 30px;
  opacity: 1;
}

.logo:hover{
  color: #871429;
}

nav a{
  padding: 20px;
  line-height: 25px;
  font-family: 'Playfair Display', serif;
  font-size: 20px;
  opacity: 0.6;
  text-decoration: none;
}
nav a:hover {
  opacity: 1
}

p {
  font-family: 'Playfair Display', serif;
}

.home-carousel {
  user-select: none;
}

